--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -14,10 +14,12 @@
                 <option value="author" <%if (sortBy == "author") {%> selected <% } %>>Author</option>
                 <option value="title" <%if (sortBy == "title") {%> selected <% } %>>Title</option>
               </select>
-              <input type="radio" id="ascending" name="sortOrder" value="1" <%if (sortOrder == 1) {%> checked <% } %> >
-              <label for="ascending">Ascending</label>
-              <input type="radio" id="descending" name="sortOrder" value="-1" <%if (sortOrder == -1) {%> checked <% } %>>
-              <label for="descending">Descending</label>
+              <div id="sortOrder">
+                <input type="radio" id="ascending" name="sortOrder" value="1" <%if (sortOrder == 1) {%> checked <% } %> >
+                <label for="ascending">Ascending</label>
+                <input type="radio" id="descending" name="sortOrder" value="-1" <%if (sortOrder == -1) {%> checked <% } %>>
+                <label for="descending">Descending</label>
+              </div>
               <button type="button" class="btn" name="submit">Sort</button>
             </section>
             <section id="allBooks">
