--- a/views/bookViews/add.ejs
+++ b/views/bookViews/add.ejs
@@ -6,6 +6,11 @@
       <div id="new">
         <h2>Add a new book</h2>
         <form action="./add" method="POST">
+          <% if (added) {%>
+            <div class="alert added">
+              <h3>Book added successfully</h3>
+            </div class="alert added">
+          <% } %>
           <div class="grid container">
             <label for="title">title</label>
             <input type="text" id="title" name="title" required />
@@ -36,10 +41,6 @@
         </form>
       </div>
     </main>
-    <script type="text/javascript">
-      if(<%=added%>)
-        alert("Book added Successfully")
-</script>
     <%- include("../partials/footer.ejs") %>
   </body>
 </html>
