--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,22 @@ header a {
     padding: 16px 20px;
   }
 }
-/*Main*/
+/*User*/
+/*Form*/
+
+.userForm {
+  max-width: 300px;
+  margin: 150px auto 0 auto;
+}
+.userForm form {
+  display: grid;
+  grid-template-columns: 100px auto;
+  grid-row-gap: 20px;
+}
+.userForm #submit {
+  grid-column: 1/3;
+}
+/*Book*/
 /*Index*/
 #listPage {
   margin-bottom: 50px;
