fixed login error after a User.save() is called

--- a/views/bookViews/book.ejs
+++ b/views/bookViews/book.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerLogged.ejs") %>
     <main id="specific">
       <div class="book container" data-bookID="<%=book._id%>">
         <i class="fas fa-trash"></i>
