--- a/views/userViews/login.ejs
+++ b/views/userViews/login.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerUnLogged.ejs") %>
     <main id="login">
       <div class="container">
         <section class="userForm">
