--- a/views/bookViews/404.ejs
+++ b/views/bookViews/404.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerLogged.ejs") %>
     <main>
       <div id="404">
         <h2>404 Error.</h2>
