--- a/views/bookViews/add.ejs
+++ b/views/bookViews/add.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerLogged.ejs") %>
     <main>
       <div id="new">
         <h2>Add a new book</h2>
