--- a/views/bookViews/browse.ejs
+++ b/views/bookViews/browse.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerLogged.ejs") %>
     <main id="browse" class="listPage">
       <div class="container" id="listPage">
         <h2>Browse books</h2>
