--- a/views/bookViews/index.ejs
+++ b/views/bookViews/index.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
 <%- include("../partials/head.ejs") %>
 <body>
-  <%- include("../partials/header.ejs") %>
+  <%- include("../partials/headerLogged.ejs") %>
     <main id="current">
       <div class="container" id="listPage">
         <h2>Current books</h2>
