--- a/public/style.css
+++ b/public/style.css
@@ -115,8 +115,9 @@ header ul {
 header li:hover {
   background-color: var(--secondary-clr);
 }
-header a {
+header li {
   text-decoration: none;
+  color: white !important;
 }
 @media (min-width: 800px) {
   header h1 {
